update elossportfolio to true wrapper style